# rori

./: .gitignore  Cargo.toml  README.md  build_pgo.sh
.cargo/: config.toml
.github/workflows/: codspeed.yml
benches/: process_directory.rs
benches/test_data/region_small/: r.-1.-2.mca  r.-1.1.mca  r.-2.-1.mca  r.0.-2.mca  r.0.1.mca  r.1.-2.mca  r.1.1.mca  r.2.-1.mca  r.2.-2.mca  r.2.0.mca  r.2.1.mca
src/: lib.rs  main.rs  parser.rs
