[package]
name = "rori"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.7.0"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
fastanvil = "0.31.0"
flate2 = { version = "1.1.2", features = ["zlib-ng"] }
indicatif = "0.18.0"
log = "0.4.27"
num_cpus = "1.17.0"
rayon = "1.10.0"

[profile.dev]
debug = false

[profile.release]
lto = "fat"
strip = "debuginfo"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
debug = true
strip = "none"
lto = "fat"
codegen-units = 1

[[bench]]
name = "process_directory"
harness = false
